Fix editor form border-radius, and truncate tag in editor form

--- a/src/stylesheet/modules/_article-editor.scss
+++ b/src/stylesheet/modules/_article-editor.scss
@@ -20,8 +20,7 @@
     display: flex;
     flex-direction: column;
     background: map-get($colors, "white");
-    border-top-right-radius: 8px;
-    border-top-left-radius: 8px;
+    border-radius: 8px;
     padding: 32px 20px;
   }
 
@@ -92,11 +91,6 @@
 
   &-tag-item {
     cursor: pointer;
-
-    .badge {
-      display: flex;
-      gap: 4px;
-    }
   }
 
   &-preview-cover {
